package ar.edu.utn.frc.tup.lciii.playerapi.models;

public enum MatchStatus {
    STARTED, FINISHED, CANCELED
}
