package ar.edu.utn.frc.tup.lciii.playerapi.models.rps;

public enum ShapeHand {
    ROCK, PAPER, SCISSORS;
}
